# rust-ray-tracing-weeknd

./: Cargo.toml  README.md
src/: lib.rs  main.rs  scene.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: camera.rs  mod.rs  sphere.rs
src/structs/: ray.rs  vec3.rs
