[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["Anton Paramoshin <a.paramoshin@lcgroup.su>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[[bin]]
name = "simple"
path = "src/main.rs"

[[bin]]
name = "scene"
path = "src/scene.rs"
